Made changes to the footer so it wrapped properly around the main page which no longer causes the site to over stretch

--- a/Fayebook/styles.css
+++ b/Fayebook/styles.css
@@ -61,10 +61,10 @@ body {
 /* end of right */
 /* footer */
 .main-page-footer {
-  grid-column: 1 / 1;
-  grid-row: 2 / -1;
-  background-color: #f5f4f4;
-  padding: 1rem;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
   border-top: 0rem solid #ddd;
 }
 
@@ -82,6 +82,16 @@ body {
   color: #444;
   font-weight: 200;
 }
+
+.page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  padding-bottom: 0.5rem;
+}
+
 /* end of footer */
 /* button */
 .btn-login {
